[package]
name = "rcrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-rt = "2"
tera = "1"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
env_logger = "0.10"